[gd_scene load_steps=14 format=3 uid="uid://3p5kp6bhanbe"]

[ext_resource type="Script" uid="uid://7q5sjfx04t" path="res://scripts/characters/wild_trader.gd" id="1_2sp57"]
[ext_resource type="Script" uid="uid://dgegklgqwvpxa" path="res://scripts/resources/char_texture.gd" id="3_8qn8c"]
[ext_resource type="Shader" uid="uid://cs7iamvps60cm" path="res://shaders/trader.gdshader" id="3_vmuvh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vmuvh"]
shader = ExtResource("3_vmuvh")
shader_parameter/opacity = 1.0
shader_parameter/velocity = Vector2(0, 0)

[sub_resource type="Image" id="Image_ycnf6"]
data = {
"data": PackedByteArray(255, 255, 255, 255),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id="ImageTexture_ni6hh"]
image = SubResource("Image_ycnf6")
script = ExtResource("3_8qn8c")
metadata/_custom_type_script = "uid://dgegklgqwvpxa"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ni6hh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qn8c"]
size = Vector2(80, 80)

[sub_resource type="Curve" id="Curve_8qn8c"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ej47d"]
curve = SubResource("Curve_8qn8c")

[sub_resource type="Curve" id="Curve_vmuvh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.33074, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_s4fir"]
curve = SubResource("Curve_vmuvh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ycnf6"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 60.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_s4fir")
alpha_curve = SubResource("CurveTexture_ej47d")

[node name="WildTrader" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_2sp57")

[node name="Render" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vmuvh")
scale = Vector2(16, 16)
texture = SubResource("ImageTexture_ni6hh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ni6hh")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("RectangleShape2D_8qn8c")

[node name="TraderParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
process_material = SubResource("ParticleProcessMaterial_ycnf6")

[connection signal="body_entered" from="CollectArea" to="." method="_on_collect_area_body_entered"]
